# azure_container_app

./: Dockerfile  pyproject.toml
.github/workflows/: deploy.yaml
app/: main.py
