[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["bilalsahi <115837919+bilalsahi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
